Configure security and add CORS filter